--- a/css/box_html.css
+++ b/css/box_html.css
@@ -1,4 +1,53 @@
-body
-{
-    background-color: rgba(0, 255, 255, 0.2);
+body {
+    background-color: rgba(6, 79, 79, 0.637);
+}
+
+#top_bar {
+    margin: 10px 10px;
+    width: 100%;
+    height: 80px;
+    background-color: rgba(190, 255, 255, 0.5);
+}
+
+.round {
+    border-radius: 10px;
+}
+#profile_photo{
+    margin: 10px 0px;
+    outline: 5px;
+    background-color: aliceblue;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 200px black;
+    /* float: left; */
+}
+.block{
+    height: 100%;
+    float: left;
+}
+#block1{
+    width: 20px;
+}
+img{
+    width: 100%;
+    border-radius: 50%;
+    box-shadow: 0px 0px 15px rgb(255, 255, 255);
+}
+#name_des{
+    width: 20%;
+    /* background-color: white; */
+}
+.float{
+    float: left;
+}
+#div_name{
+    margin: 25px 10px;
+}
+#name{
+    font-size: 130%;
+    font-weight: bold;
+    font-style: italic;
+    color: rgba(0, 27, 32, 0.803);
+    text-shadow: rgb(21, 199, 128) 1px 0 10px;
 }
