--- a/css/box_html.css
+++ b/css/box_html.css
@@ -3,8 +3,8 @@ body {
 }
 
 #top_bar {
-    margin: 10px 10px;
-    width: 100%;
+    margin: 10px 10px 10px;
+    width: 98%;
     height: 80px;
     background-color: rgba(190, 255, 255, 0.5);
 }
