--- a/css/box_html.css
+++ b/css/box_html.css
@@ -3,10 +3,11 @@ body {
 }
 
 #top_bar {
-    margin: 10px 10px 10px;
-    width: 95%;
+    margin: 10px 10px 10px 10px;
+    /* width: 100%; */
     height: 80px;
     background-color: rgba(190, 255, 255, 0.5);
+    overflow: hidden;
 }
 
 .round {
