--- a/css/box_html.css
+++ b/css/box_html.css
@@ -61,7 +61,7 @@ img {
     font-size: 130%;
     font-weight: bold;
     font-style: italic;
-    color: rgba(233, 227, 227, 0.803);
+    color: rgba(243, 174, 105, 0.955);
     text-shadow: rgb(21, 199, 128) 1px 0 10px;
 }
 
@@ -74,4 +74,13 @@ img {
     font-weight: bold;
     font-style: oblique;
     color: rgb(78, 70, 70);
+    text-shadow: rgb(255, 255, 255) 1px 0 10px;
+}
+#des:hover{
+    color: rgba(236, 236, 236, 0.845);
+    text-shadow: rgb(255, 255, 255) 1px 0 10px;
+}
+#name:hover{
+    color: rgba(236, 236, 236, 0.845);
+    text-shadow: rgb(21, 199, 128) 1px 0 10px;
 }
