--- a/css/box_html.css
+++ b/css/box_html.css
@@ -61,8 +61,9 @@ img {
     font-size: 130%;
     font-weight: bold;
     font-style: italic;
-    color: rgba(243, 174, 105, 0.955);
-    text-shadow: rgb(21, 199, 128) 1px 0 10px;
+    color: rgb(78, 70, 70);
+    text-shadow: rgb(255, 255, 255) 1px 0 10px;
+    text-decoration: none;
 }
 
 #div_des {
@@ -78,9 +79,9 @@ img {
 }
 #des:hover{
     color: rgba(236, 236, 236, 0.845);
-    text-shadow: rgb(255, 255, 255) 1px 0 10px;
+    /* text-shadow: rgb(255, 255, 255) 1px 0 10px; */
 }
 #name:hover{
     color: rgba(236, 236, 236, 0.845);
-    text-shadow: rgb(21, 199, 128) 1px 0 10px;
+    /* text-shadow: rgb(21, 199, 128) 1px 0 10px; */
 }
