--- a/css/box_html.css
+++ b/css/box_html.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgba(6, 79, 79, 0.637);
+    background-color: rgba(0, 146, 146, 0.637);
 }
 
 #top_bar {
@@ -42,11 +42,6 @@ img {
     width: 100%;
     border-radius: 50%;
     box-shadow: 0px 0px 15px rgb(255, 255, 255);
-}
-
-#name_des {
-    /* width: 100%; */
-    /* background-color: white; */
 }
 
 .float {
@@ -103,4 +98,46 @@ img {
     border-color: black;
     font-weight: bold;
     color: rgba(0,0,0,0.6);
+}
+#main{
+    margin-left: 10px;
+}
+.side{
+    background-color: rgba(190, 255, 255, 0.5);
+    width: 150px;
+}
+.side2{
+    /* background-color: rgba(190, 255, 255, 0.5); */
+    width: 149px;
+}
+#side_title > p{
+    color: rgba(11, 60, 237, 0.845);
+    margin: 5px 0px;
+    text-align: center;
+    font-weight: bold;
+}
+#side_title{
+    display: inline-block;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+}
+#side_content{
+    background-color: rgba(237, 243, 248, 0.479);
+    width: 150px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+#side_content > div > a{
+    display: block;
+    text-align: center;
+    /* margin: 20px auto; */
+    padding: 10px 0px 10px 0px;
+    text-decoration: none;
+    font-size: 80%;
+    color: rgba(14, 14, 34, 0.629);
+    font-weight: bold;
+    text-shadow: rgb(255, 255, 255) 1px 0 10px;
+}
+#side_content > div{
+    border-top: rgba(3, 27, 132, 0.648) 2px solid;
 }
