--- a/css/box_html.css
+++ b/css/box_html.css
@@ -138,6 +138,9 @@ img {
     font-weight: bold;
     text-shadow: rgb(255, 255, 255) 1px 0 10px;
 }
+#side_content > div > a:hover{
+    text-shadow: rgba(3, 27, 132, 0.648) 1px 0 10px;
+}
 #side_content > div{
     border-top: rgba(3, 27, 132, 0.648) 2px solid;
 }
