--- a/css/box_html.css
+++ b/css/box_html.css
@@ -165,7 +165,7 @@ img {
 }
 .music_control{
     background-color: rgba(6, 79, 79, 0.337);
-    border-radius: 15%;
+    /* border-radius: 20%; */
     box-shadow: 0px 0px 5px black;
     border-style: solid;
     border-color: black;
