--- a/css/box_html.css
+++ b/css/box_html.css
@@ -171,6 +171,7 @@ img {
     border-color: black;
     font-weight: bold;
     color: rgba(10, 32, 141, 0.6);
+    margin: 5px 14px;
 }
 #music_name{
     float: left;
