--- a/css/index_blog.css
+++ b/css/index_blog.css
@@ -1,6 +1,9 @@
 html{
     min-width: 1260px;
 }
+body{
+    background-color: #33333321;
+}
 .top_bar{
     font-family: 'Times New Roman', Times, serif;
     width: 100%;
@@ -36,7 +39,17 @@ html{
     text-align: center;
     line-height: 50px;
 }
-.left_section li:hover, .right_section li:hover, .left_section li:hover a, .right_section li:hover a{
+.left_section li:hover a, .right_section li:hover a{
     background-color: #fff;
     color: #333;
+}
+.left_section a{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.right_section a{
+    display: block;
+    width: 100%;
+    height: 100%;
 }
