--- a/css/ex3.css
+++ b/css/ex3.css
@@ -21,10 +21,11 @@
     width:35px
 }
 #submit{
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
     width: 100px;
-    height: 30px;
-
-    border-radius: 5px;
+    height: 35px;
+    border-radius: 50px;
     font-size: 20px;
-
 }
