--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -1,21 +1,26 @@
+body{
+    background: rgba(187, 255, 170, 0.21);
+    margin: 0;
+    padding: 0;
+}
 #box{
-    width: 100%;
+    width: 505px;
     height: 100%;
+    margin: 0 auto;
     position: relative;
     overflow: hidden;
-    background: rgba(187, 255, 170, 0.308);
 }
 #img_box{
-    width: 500px;
+    width: 90%;
     height: 668px;
+    margin: 0 auto;
     position: relative;
     /* overflow: hidden; */
     background: #c57a7a;
-    margin: 0 auto;
     border: 4px solid rgba(187, 255, 170, 0.818);
 }
 #controller{
-    width: 607px;
+    width: 90%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
