--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -4,7 +4,7 @@ body{
     padding: 0;
 }
 #box{
-    width: 405px;
+    width: 415px;
     height: 100%;
     margin: 0 auto;
     position: relative;
@@ -12,12 +12,21 @@ body{
 }
 #img_box{
     width: 90%;
-    height: 568px;
+    height: 490px;
     margin: 0 auto;
     position: relative;
     /* overflow: hidden; */
     background: #c57a7a;
     border: 4px solid rgba(187, 255, 170, 0.818);
+}
+#img_box img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    transition: all 0.5s;
 }
 #controller{
     width: 90%;
@@ -38,5 +47,5 @@ body{
     height: 100px;
     position: absolute;
     z-index: 999;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.303);
 }
