--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -4,7 +4,7 @@ body{
     padding: 0;
 }
 #box{
-    width: 415px;
+    width: 410px;
     height: 100%;
     margin: 0 auto;
     position: relative;
@@ -12,20 +12,22 @@ body{
 }
 #img_box{
     width: 90%;
-    height: 490px;
+    height: 466px;
     margin: 0 auto;
     position: relative;
-    /* overflow: hidden; */
-    background: #c57a7a;
     border: 4px solid rgba(187, 255, 170, 0.818);
+    overflow: hidden;
+    border-radius: 15px;
+}
+#img_list{
+    position: relative;
+    top: 0;
 }
 #img_box img{
     width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
     z-index: 1;
-    transition: all 0.5s;
+    margin: 0 0 2px 0;
 }
 #controller{
     width: 90%;
@@ -46,5 +48,37 @@ body{
     height: 100px;
     position: absolute;
     z-index: 999;
-    background-color: rgba(0, 0, 0, 0.303);
+    /* background-color: rgba(0, 0, 0, 0.303); */
+    overflow: hidden;
+}
+#qrCode img{
+    width: 100%;
+    height: 100%;
+    opacity: 0.85;
+    filter: alpha(opacity=10);
+    border-radius: 15px;
+}
+#navigator{
+    width: 100%;
+    height: 20px;
+    position: absolute;
+    top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+#navigator > li > a{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: block;
+    margin: 0 10px;
+}
+#navigator li a:hover{
+    background-color: black;
+}
+#navigator li a:active{
+    background-color: rgb(47, 95, 95);
 }
