--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -21,7 +21,7 @@ body{
 }
 #img_list{
     position: relative;
-    top: 0;
+    top: -0px;
 }
 #img_box img{
     width: 100%;
@@ -49,14 +49,14 @@ body{
     position: absolute;
     z-index: 999;
     /* background-color: rgba(0, 0, 0, 0.303); */
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 #qrCode img{
     width: 100%;
     height: 100%;
-    opacity: 0.85;
+    opacity: 0.7;
     filter: alpha(opacity=10);
-    border-radius: 15px;
+    border-radius: 10px;
 }
 #navigator{
     width: 100%;
@@ -72,12 +72,12 @@ body{
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(255, 254, 254, 0.826);
     display: block;
     margin: 0 10px;
 }
 #navigator li a:hover{
-    background-color: black;
+    background-color: rgb(255, 255, 255);
 }
 #navigator li a:active{
     background-color: rgb(47, 95, 95);
